overlap removed in msi_admin page and navbar fix-header removed

--- a/alumni_portal/static/css/msi_admin.css
+++ b/alumni_portal/static/css/msi_admin.css
@@ -1,9 +1,12 @@
 .card
 {
 	width: 90%;
-	margin-top: 2%;
+	margin-top: 3%;
 	margin-bottom: 2%;
 	border: 2px blue solid;
+}
+#notice_card{
+	margin-top: 9%;
 }
 .card-header
 {
