--- a/alumni_portal/static/css/style.css
+++ b/alumni_portal/static/css/style.css
@@ -386,7 +386,7 @@ a.navbar-brand {
 }
 
 .top-header.fixed-menu {
-	width: 100%;
+/*	width: 100%;
 	position: fixed;
 	box-shadow: 0px 3px 6px 3px rgba(0, 0, 0, 0.06);
 	-webkit-animation-duration: 1s;
@@ -396,7 +396,7 @@ a.navbar-brand {
 	-webkit-animation-name: fadeInDown;
 	animation-name: fadeInDown;
 	background: #fff;
-	z-index: 20;
+	z-index: 20;*/
 }
 
 .navbar-toggler {
